--- a/Encrypteur/Encrypteur/Encrypteur.csproj
+++ b/Encrypteur/Encrypteur/Encrypteur.csproj
@@ -77,6 +77,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DLLEncrypt\DLLEncrypt.csproj">
+      <Project>{10490fd0-f420-4b1f-8dee-aafa13ba6fd5}</Project>
+      <Name>DLLEncrypt</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
